Задание 8. Добавлена функциональность запроса баланса
