# src/main/java/gpb/dus/middle/accounts/controller/AccountController.java
@@ -2,9 +2,11 @@ package gpb.dus.middle.accounts.controller;
 
 import gpb.dus.middle.accounts.service.AccountService;
 import gpb.dus.middle.api.generated.AccountsResource;
+import gpb.dus.middle.api.generated.model.AccountResponseApi;
 import gpb.dus.middle.api.generated.model.CreateAccountRequestV2Api;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
+import org.springframework.http.HttpStatusCode;
 import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.RestController;
 
@@ -22,6 +24,13 @@ public class AccountController implements AccountsResource {
         accountService.createUserAccount(id.toString(), createAccountRequestV2Api);
 
         return ResponseEntity.noContent().build();
+    }
+
+    @Override
+    public ResponseEntity<AccountResponseApi> getUserAccountBalance(Long id) {
+        log.info("[Account controller] get user = {} account balance", id.toString());
+
+        return new ResponseEntity<>( accountService.getUserAccountBalance(id.toString()), HttpStatusCode.valueOf(200));
     }
 
 }
